--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 body {
-  font-family: 'Arial', sans-serif;
-  padding: 20px;
+  background-color: rgb(43, 226, 214);
+    text-align: center;
+    transition-duration: 10ms;
 }
 
 .main-div {
   padding: 10px;
   margin-top: 20px;
   background-color: #f5f5f5;
+  color: #ffcc00;
 }
 
 img {
@@ -41,6 +43,14 @@ input[type="text"] {
 
 ul {
   margin-top: 15px;
+  text-align: center;
+  
+}
+li {
+  margin-top: 30px;
+  text-align: left;
+  border: #f5f5f5;
+  color:rgb(4, 33, 252)
 }
 
 #dropzone {
