--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
 body {
-  background-color: rgb(43, 226, 214);
+  background-color: rgb(2, 44, 41);
     text-align: center;
+    transition-duration: 10ms;
+}
+
+h1 {
+  text-align: center;
+  color: rgb(84, 84, 244);
     transition-duration: 10ms;
 }
 
@@ -20,6 +26,13 @@ img {
   margin-top: 20px;
   background-color: hsl(0, 0%, 88%);
   padding: 10px;
+}
+
+div {
+  margin-top: 20px;
+  padding: 10px;
+  text-align: center;
+  color: #007bff;
 }
 
 button {
@@ -47,10 +60,10 @@ ul {
   
 }
 li {
-  margin-top: 30px;
+  margin-top: 10px;
   text-align: left;
   border: #f5f5f5;
-  color:rgb(4, 33, 252)
+  color:rgb(64, 86, 251)
 }
 
 #dropzone {
