--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,14 @@ div {
   color: #007bff;
 }
 
+video {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height:100%;
+  z-index: -1;
+}
+
 button {
   margin-top: 10px;
   padding: 8px 15px;
