--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,25 @@ body {
 
 h1 {
   text-align: center;
-  color: rgb(157, 157, 245);
+  color: rgb(98, 255, 1);
+    transition-duration: 10ms;
+}
+
+h3 {
+  text-align: center;
+  color: rgb(98, 255, 1);
+    transition-duration: 10ms;
+}
+
+p {
+  text-align: center;
+  color: rgb(218, 226, 112);
+    transition-duration: 10ms;
+}
+
+a {
+  text-align: center;
+  color: rgb(148, 251, 64);
     transition-duration: 10ms;
 }
 
@@ -73,6 +91,12 @@ li {
   border: #f5f5f5;
   color:rgb(148, 251, 64)
 }
+
+a {
+  margin-top: 10px;
+  text-align: left;
+  border: #f5f5f5;
+  color:rgb(148, 251, 64)
 
 #dropzone {
   border: 2px dashed #ccc;
