--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,11 @@ h1 {
   color: rgb(1, 5, 255);
     transition-duration: 10ms;
 }
-
+h2 {
+  text-align: center;
+  color: rgb(98, 255, 1);
+    transition-duration: 10ms;
+}
 h3 {
   text-align: center;
   color: rgb(98, 255, 1);
@@ -29,7 +33,7 @@ a {
 }
 
 select {
-  text-align: left;
+  text-align: center;
 }
 
 .main-div {
@@ -87,11 +91,11 @@ input[type="text"] {
 ul {
   margin-top: 15px;
   text-align: center;
-  
 }
+
 li {
   margin-top: 10px;
-  text-align: left;
+  text-align: center;
   border: #f5f5f5;
   color:rgb(148, 251, 64)
 }
@@ -101,6 +105,7 @@ a {
   text-align: left;
   border: #f5f5f5;
   color:rgb(148, 251, 64)
+}
 
 #dropzone {
   border: 2px dashed #ccc;
